test/errors/hex_literal_missing_digits_fail.hy
// Expect failure: hex literal without digits
int main() {
    int value = 0x
    return value
}
